--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.35.4",
     "@vueuse/core": "^8.7.5",
     "@vueuse/head": "^0.7.6",
     "nprogress": "^0.2.0",
