--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
     "prism-theme-vars": "^0.2.3",
+    "vite-ssr": "^0.16.0",
     "vue": "^3.2.37",
     "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.16"
